[project]
name = "repl-nix-videoclipsplitter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "scenedetect>=0.6.4",
    "yt-dlp>=2024.10.7",
    "opencv-python>=4.10.0.84",
]
